# ner-amplifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  augmented.txt  augmented_corpus.txt  experiment.py  logic.py  pyproject.toml
amplifier/: __init__.py  representations.py  utils.py
amplifier/augmenters/: __init__.py  base.py  entities.py  nouns.py
augmenters/: __init__.py  representations.py  utils.py
tests/: bio.txt  test_corpus.py  test_data.txt  test_sentence.py  test_token.py
