[tool.poetry]
name = "ner-amplifier"
version = "0.1.0"
description = "Stochastic augmentation of CONLL datasets for NER tasks"
authors = ["Panos <panagiotisban@gmail.com>"]
readme = "README.md"
packages = [{include = "ner_amplifier"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.2"
gensim = "^4.3.2"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
